# VGuardrail

./: .compose.run.yml  .dockerignore  .env.example  .gitignore  Caddyfile  README.md  VGuardrail_Documentation.html  bootstrap-admin.sh  deploy-prod.sh  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.yml  provision-local-dynamodb.sh  provision-policy-rules.sh  run.sh  seed-dev-data.sh  seed-local-data.sh  setup.sh  start-local.sh
agent/: Package.resolved  Package.swift  README.md
agent/Resources/: MenuBar-Info.plist  com.vguardrail.agent.plist  com.vguardrail.menubar.plist
agent/Scripts/: gen-proto.sh  install.sh
agent/Sources/CSQLite/: shim.h
agent/Sources/VGAgentCore/: AICatalog.swift  AgentCore.swift  FilePolicySource.swift  HTTPUploadClient.swift  LoopbackPolicyEngineClient.swift  Seams.swift
agent/Sources/VGCore/: AgentConfig.swift  AgentStatus.swift  AuditEvent.swift  Decision.swift  Enums.swift  Identity.swift  ScanRequest.swift  UUIDv7.swift
agent/Sources/VGEventQueue/: EventQueue.swift  (+2 more)
app/config/: config.py
backend/: Dockerfile  README.md
backend/lambdas/: Cargo.toml
backend/lambdas/crates/app/: Cargo.toml
backend/lambdas/crates/app/src/: admin.rs  dto.rs  handlers.rs  lib.rs  ports.rs  testing.rs
backend/lambdas/crates/app/tests/: e2e_flow.rs  integration.rs
backend/lambdas/crates/audit-core/: Cargo.toml
backend/lambdas/crates/audit-core/src/: error.rs  event.rs  hash.rs  idempotency.rs  lib.rs
backend/lambdas/crates/aws/: Cargo.toml
backend/lambdas/crates/aws/src/: cognito.rs  config.rs  dynamo.rs  lib.rs  s3.rs  secrets.rs
backend/lambdas/crates/functions/: Cargo.toml
backend/lambdas/crates/functions/src/: lib.rs
backend/localstack/: docker-compose.yml  e2e.sh  provision.sh
backend/openapi/: openapi.yaml
backend/scripts/: build-lambdas.sh
backend/server/: Cargo.toml
backend/server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  request_ctx.rs  router.rs  state.rs  tests_http.rs
backend/server/src/extract/: archive.rs  mime.rs  mod.rs  office.rs  pdf.rs
backend/server/src/routes/: admin_audit.rs  admin_devices.rs  admin_policies_exceptions.rs  admin_settings.rs  admin_stats.rs  admin_users.rs  agent.rs  mod.rs  scan.rs
browser-connectors/: README.md
browser-connectors/chrome/: run-dev.sh
cli-connectors/: README.md
cli-connectors/framework/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
cli-connectors/scripts/: install-claude-hook.sh  install-wrappers.sh
cli-connectors/shared/: package-lock.json  package.json  tsconfig.json
connector-sdk/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
connector-sdk/bridge/: Package.swift
connector-sdk/src/: index.ts
dashboard/: Dockerfile  README.md  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
dashboard/app/: layout.tsx  page.tsx  providers.tsx
dashboard/e2e/: dashboard.spec.ts
dashboard/hooks/: useAsyncRepo.ts  useAudit.ts  useDashboard.ts  useDeviceNames.ts  useDevices.ts  useExceptions.ts  usePolicies.ts  useRepositories.ts  useSession.ts  useSettings.ts  useUsers.ts  useViolations.ts
dashboard/types/: auth.ts  index.ts  next-auth.d.ts
ide-connectors/: README.md
ide-connectors/cursor/: package-lock.json  package.json
ide-connectors/jetbrains/: build.gradle.kts  gradle.properties  settings.gradle.kts
ide-connectors/vscode/: .vscodeignore  package-lock.json  package.json  tsconfig.json
policy-engine/: .gitignore  Cargo.toml  README.md  deny.toml
policy-engine/config/: detectors.yaml  policy.local.json  policy.local.signed.json
policy-engine/crates/pe-core/: Cargo.toml
policy-engine/crates/pe-core/src/: context.rs  decision.rs  detector.rs  enums.rs  error.rs  finding.rs  lib.rs  time.rs
policy-engine/crates/pe-core/tests/: domain_integration.rs
policy-engine/crates/pe-detectors/: Cargo.toml
policy-engine/crates/pe-detectors/benches/: scan.rs
policy-engine/crates/pe-detectors/corpora/pii.credit_card/: negatives.txt  positives.txt  thresholds.toml
policy-engine/crates/pe-detectors/corpora/pii.email/: negatives.txt  positives.txt  thresholds.toml
policy-engine/crates/pe-detectors/corpora/secret.aws_access_key/: negatives.txt  positives.txt  thresholds.toml
policy-engine/crates/pe-detectors/src/: classify.rs  compliance.rs  confidential.rs  customer_data.rs  destructive.rs  document.rs  domains.rs  file_policy.rs  financial.rs  image.rs  ip.rs  keyword.rs  lexicon.rs  lib.rs  pii.rs  prompt_injection.rs  registry.rs  riskscore.rs  secret.rs  sensitive_info.rs  sourcecode.rs  usage_policy.rs  util.rs
policy-engine/crates/pe-detectors/tests/: corpus_gate.rs
policy-engine/crates/pe-dsl/: Cargo.toml
policy-engine/crates/pe-dsl/benches/: eval.rs
policy-engine/crates/pe-dsl/examples/: sign_bundle.rs
policy-engine/crates/pe-dsl/src/: canonical.rs  error.rs  eval.rs  lib.rs  model.rs  policy_set.rs  regexcache.rs  signature.rs  validate.rs
policy-engine/crates/pe-dsl/tests/: eval_integration.rs
policy-engine/crates/pe-engine/: Cargo.toml
policy-engine/crates/pe-engine/benches/: pipeline.rs
policy-engine/crates/pe-engine/src/: code_classifier.rs  config.rs  event.rs  http.rs  lib.rs  llm.rs  main.rs  risk.rs  runtime.rs  service.rs
policy-engine/crates/pe-engine/tests/: engine_integration.rs
policy-engine/crates/pe-grpc/: Cargo.toml  build.rs
policy-engine/crates/pe-grpc/proto/policy_engine/v1/: policy_engine.proto
policy-engine/crates/pe-grpc/src/: lib.rs  map.rs  transport.rs
policy-engine/crates/pe-grpc/tests/: contract.rs
policy-engine/crates/pe-store/: Cargo.toml
policy-engine/crates/pe-store/benches/: queue.rs
policy-engine/crates/pe-store/migrations/: 0001_init.sql
policy-engine/crates/pe-store/src/: error.rs  lib.rs  model.rs  store.rs
policy-engine/crates/pe-store/tests/: store_integration.rs
policy-engine/packaging/: com.vguardrail.policy-engine.plist  install-engine-with-env.sh  install-engine.sh
(+431 files in other folders)
