[package]
name        = "server"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.82"
license     = "Apache-2.0"
description = "VGuardrail Audit Cloud — native HTTP server (replaces API Gateway + Lambda)."

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Internal workspace crates — the server is a thin transport layer.
app           = { path = "../lambdas/crates/app" }
audit-core    = { path = "../lambdas/crates/audit-core" }
aws-adapters  = { path = "../lambdas/crates/aws" }
pe-core       = { path = "../../policy-engine/crates/pe-core" }
pe-dsl        = { path = "../../policy-engine/crates/pe-dsl" }
pe-detectors  = { path = "../../policy-engine/crates/pe-detectors" }
pe-engine     = { path = "../../policy-engine/crates/pe-engine" }
once_cell     = "1"

# Async runtime.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
futures = "0.3"
async-trait = "0.1"

# HTTP server.
axum = { version = "0.7", features = ["macros", "json", "query", "tokio", "http1"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "limit", "request-id", "timeout", "util"] }
hyper = { version = "1", features = ["server", "http1"] }

# Serde / JSON / query.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde_yaml = "0.9"

# Errors / logging.
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Time / UUID.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4"] }

# File-content extraction (multi-tier scanning): magic-byte MIME sniffing,
# PDF text extraction, and OOXML/ZIP (Office docs + archives).
base64 = "0.22"
infer = "0.16"
pdf-extract = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"

# JWT verification (Cognito RS256) + JWKS fetch.
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# AWS SDK — used to talk to Dynamo / S3 / Cognito / Secrets at runtime,
# the same way the Lambda binaries did. The server is the only place
# that links to the SDK now.
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-sdk-s3 = "1"
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-secretsmanager = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
