[package]
name = "pe-detectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "VGuardrail Policy Engine — detectors for all 15 policy categories, registry, classification, and risk scoring."

[dependencies]
pe-core = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "scan"
harness = false
