[package]
name = "pe-dsl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "VGuardrail Policy DSL — signed/versioned policy bundles, exceptions, and the deterministic evaluator."

[dependencies]
pe-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "eval"
harness = false
