[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "VGuardrail Audit Cloud — handler logic (register, policy, events) over storage/identity ports."

[dependencies]
audit-core = { workspace = true }
pe-core = { workspace = true }
pe-dsl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
